# minGPT

./: .gitignore  play_char.ipynb  pyproject.toml
