[tool.poetry]
name = "mingpt"
version = "0.1.0"
description = ""
authors = ["Andrej Karpathy"]

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
tqdm = "^4.48.2"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
